--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:f6VSLeJ0PrnlH/HRKzEuPCc24LH/vnodYjZs1LrnC+M=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -8,9 +8,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=news
+DB_USERNAME=Dfonseca
+DB_PASSWORD=5HpEgmc7PiyMNicP
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
